Fix album stretching

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -450,7 +450,7 @@ figcaption {
 
 #listen .album img {
   width: 100%;
-  height: 100%;
+  height: auto;
 }
 
 #listen .albumLinks {
